--- a/examples/RVS_O3/scripts/testing.ipynb
+++ b/examples/RVS_O3/scripts/testing.ipynb
@@ -11,31 +11,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c8ff0da",
+   "id": "d4e416d6",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
-    "sys.path.append(\"./../\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d4e416d6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src import env\n",
+    "sys.path.append(\"./../../../\")\n",
+    "\n",
+    "from ronek import env\n",
     "env.set(\n",
-    "  backend=\"torch\",\n",
     "  device=\"cpu\",\n",
     "  device_idx=1,\n",
     "  nb_threads=16,\n",
-    "  epsilon=1e-10,\n",
     "  floatx=\"float64\"\n",
-    ")"
+    ")\n"
    ]
   },
   {
@@ -56,24 +46,12 @@
     "import torch\n",
     "import numpy as np\n",
     "\n",
-    "from src.utils import *\n",
-    "from src.systems import TASystem\n",
-    "from matplotlib import pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "offensive-collection",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy import constants\n",
-    "from scipy.constants import physical_constants as pc\n",
-    "\n",
-    "UNA = pc[\"Avogadro constant\"][0]\n",
-    "UKB = pc[\"Boltzmann constant\"][0]\n",
-    "eV_to_J = constants.eV"
+    "from ronek import const\n",
+    "from ronek.systems import TASystem\n",
+    "from ronek.postproc import plotting as pltt\n",
+    "from ronek.postproc import animation as anim\n",
+    "from matplotlib import pyplot as plt\n",
+    "from silx.io.dictdump import h5todict"
    ]
   },
   {
@@ -94,19 +72,37 @@
     "# System\n",
     "T = 1e4\n",
     "T0 = 4000\n",
-    "atom = \"O\"\n",
-    "molecule = \"O2\"\n",
-    "max_mom = 10\n",
     "# Paths\n",
     "paths = {\n",
     "  \"lev\": \"/home/zanardi/Codes/TC/HyperNet/database/levels/O3_UMN/O2.csv\",\n",
     "  \"sol\": f\"/home/zanardi/Workspace/AirDatabase/ThermoChemModels/StS/run/O3_UMN/T0_{int(T0)}K/output_box\",\n",
-    "  \"dtb\": \"./../database/RVS_O3/\",\n",
-    "  \"bpod\": f\"./../data/bpod_lin_ta.T{int(T)}K.m{max_mom}\"\n",
+    "  \"dtb\": \"./../database/\",\n",
+    "  \"data\": \"./data/\"\n",
     "}\n",
     "# Plotting\n",
     "saving = True\n",
     "showing = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a72b44c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[15, 20, 25, 30, 35, 40]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rom_dims = list(range(15,41,5))"
    ]
   },
   {
@@ -117,7 +113,7 @@
    "outputs": [],
    "source": [
     "if saving:\n",
-    "  os.makedirs(paths[\"bpod\"]+\"/figs\", exist_ok=True)"
+    "  os.makedirs(paths[\"data\"]+\"/figs/\", exist_ok=True)"
    ]
   },
   {
@@ -200,11 +196,23 @@
    "outputs": [],
    "source": [
     "model = TASystem(\n",
-    "  rates=paths[\"dtb\"]+\"kinetics.hdf5\",\n",
-    "  species={k: paths[\"dtb\"]+f\"species/{k}.json\" for k in (\"atom\", \"molecule\")},\n",
+    "  rates=paths[\"dtb\"] + \"/kinetics.hdf5\",\n",
+    "  species={\n",
+    "    k: paths[\"dtb\"] + f\"/species/{k}.json\" for k in (\"atom\", \"molecule\")\n",
+    "  },\n",
     "  use_einsum=False\n",
     ")\n",
     "model.update_fom_ops(T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ac4a90f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ei = model.species[\"molecule\"].lev['e'] / const.eV_to_J"
    ]
   },
   {
@@ -212,7 +220,18 @@
    "id": "4503b6ea",
    "metadata": {},
    "source": [
-    "Balanced POD"
+    "Balanced truncation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d77ba481",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if saving:\n",
+    "  os.makedirs(paths[\"data\"]+\"/figs/bases/\", exist_ok=True)"
    ]
   },
   {
@@ -222,9 +241,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s, phi, psi = [\n",
-    "  torch.load(paths[\"bpod\"]+f\"/{k}.pt\").numpy() for k in (\"s\", \"phi\", \"psi\")\n",
-    "]"
+    "bases = h5todict(paths[\"data\"]+\"/bases.hdf5\")\n",
+    "s, phi, psi = [bases[k] for k in (\"s\", \"phi\", \"psi\")]"
    ]
   },
   {
@@ -258,10 +276,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dimmax = 20\n",
-    "plot_cumenergy(\n",
-    "  cs[:dimmax],\n",
-    "  filename=paths[\"bpod\"] + \"/figs/cum_en.png\",\n",
+    "dim_max = 20\n",
+    "pltt.cum_energy(\n",
+    "  cs[:dim_max],\n",
+    "  filename=paths[\"data\"]+\"/figs/bases/cum_en.png\",\n",
     "  save=saving,\n",
     "  show=showing\n",
     ")"
@@ -274,14 +292,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(dimmax):\n",
+    "for i in range(dim_max):\n",
     "  nb = str(i+1)\n",
-    "  plot_2D(\n",
-    "    x=lev['E'],\n",
+    "  pltt.dist_2d(\n",
+    "    x=ei,\n",
     "    y_true=phi[:,i],\n",
+    "    labels=[r\"$\\epsilon_i$ [eV]\", r\"$\\phi_{{%s}}$\" % nb],\n",
+    "    scales=[\"linear\", \"linear\"],\n",
+    "    filename=paths[\"data\"] + f\"/figs/bases/phi_{nb.zfill(2)}.png\",\n",
+    "    save=saving,\n",
+    "    show=showing\n",
+    "  )\n",
+    "  pltt.dist_2d(\n",
+    "    x=ei,\n",
+    "    y_true=psi[:,i],\n",
     "    labels=[r\"$\\epsilon_i$ [eV]\", r\"$\\psi_{{%s}}$\" % nb],\n",
     "    scales=[\"linear\", \"linear\"],\n",
-    "    filename=paths[\"bpod\"] + f\"/figs/phi_{nb.zfill(2)}.png\",\n",
+    "    filename=paths[\"bpod\"] + f\"/figs/bases/psi_{nb.zfill(2)}.png\",\n",
     "    save=saving,\n",
     "    show=showing\n",
     "  )"
