--- a/examples/VS_O3_O4/scripts/testing.ipynb
+++ b/examples/VS_O3_O4/scripts/testing.ipynb
@@ -17,23 +17,15 @@
    "source": [
     "import os\n",
     "import sys\n",
-    "sys.path.append(\"./../\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d4e416d6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src import env\n",
+    "import importlib\n",
+    "if (importlib.util.find_spec(\"ronek\") is None):\n",
+    "  sys.path.append(\"./../../../\")\n",
+    "\n",
+    "from ronek import env\n",
     "env.set(\n",
-    "  backend=\"torch\",\n",
     "  device=\"cpu\",\n",
-    "  device_idx=1,\n",
-    "  nb_threads=16,\n",
-    "  epsilon=1e-10,\n",
+    "  device_idx=0,\n",
+    "  nb_threads=8,\n",
     "  floatx=\"float64\"\n",
     ")"
    ]
@@ -49,32 +41,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a341559b",
+   "id": "8dba1102",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import numpy as np\n",
     "\n",
-    "from src import const\n",
-    "from src.utils import *\n",
-    "from src.systems import TAFASystem\n",
-    "from matplotlib import pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "offensive-collection",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy import constants\n",
-    "from scipy.constants import physical_constants as pc\n",
+    "from utils import *\n",
     "\n",
-    "UNA = pc[\"Avogadro constant\"][0]\n",
-    "UKB = pc[\"Boltzmann constant\"][0]\n",
-    "eV_to_J = constants.eV"
+    "from ronek import const\n",
+    "from ronek.systems import TAFASystem\n",
+    "from matplotlib import pyplot as plt\n",
+    "from silx.io.dictdump import h5todict"
    ]
   },
   {
@@ -95,32 +74,22 @@
     "# System\n",
     "T = 1e4\n",
     "ic = {\n",
-    "  \"T\": 4000,\n",
-    "  \"p\": 1000,\n",
-    "  \"Xa\": 0.05\n",
+    "  \"cold\": [5e2, 1e3, 5e-2],\n",
+    "  \"hot\":  [3e3, 1e3, 5e-2]\n",
     "}\n",
-    "atom = \"O\"\n",
-    "molecule = \"O2\"\n",
-    "max_mom = 10\n",
+    "tgrid = {\n",
+    "  \"lim\": [1e-12, 1e-3],\n",
+    "  \"pts\": 500\n",
+    "}\n",
+    "rom_dims = list(range(8,15,2))\n",
     "# Paths\n",
     "paths = {\n",
-    "  \"dtb\": \"./../database/VS_O3_O4/\",\n",
-    "  \"bpod\": f\"./../data/bpod_lin_tafa.T{int(T)}K.m{max_mom}\"\n",
+    "  \"dtb\": \"./../database/\",\n",
+    "  \"data\": \"./data/\"\n",
     "}\n",
     "# Plotting\n",
     "saving = True\n",
     "showing = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e66f210f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if saving:\n",
-    "  os.makedirs(paths[\"bpod\"]+\"/figs\", exist_ok=True)"
    ]
   },
   {
@@ -139,12 +108,21 @@
    "outputs": [],
    "source": [
     "model = TAFASystem(\n",
-    "  rates=paths[\"dtb\"]+\"kinetics.hdf5\",\n",
-    "  species={k: paths[\"dtb\"]+f\"species/{k}.json\" for k in (\"atom\", \"molecule\")},\n",
+    "  rates=paths[\"dtb\"] + \"/kinetics.hdf5\",\n",
+    "  species={\n",
+    "    k: paths[\"dtb\"] + f\"/species/{k}.json\" for k in (\"atom\", \"molecule\")\n",
+    "  },\n",
     "  use_einsum=False\n",
     ")\n",
-    "model.update_fom_ops(T)\n",
-    "sp_mol = model.species[\"molecule\"]"
+    "model.update_fom_ops(T)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25a407b1",
+   "metadata": {},
+   "source": [
+    "> Molecule's levels"
    ]
   },
   {
@@ -154,16 +132,192 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gi = sp_mol.lev[\"g\"]\n",
-    "ei = sp_mol.lev['e']/const.eV_to_J"
+    "gi = model.species[\"molecule\"].lev[\"g\"]\n",
+    "ei = model.species[\"molecule\"].lev['e'] / const.eV_to_J"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c9766630",
+   "id": "b2ae8c12",
    "metadata": {},
    "source": [
-    "FOM solution"
+    "Balanced POD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e00f719",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.makedirs(paths[\"data\"]+\"/figs/bases/\", exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11be0f63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bases = h5todict(paths[\"data\"]+\"/bases.hdf5\")\n",
+    "s, phi, psi = [bases[k].real for k in (\"s\", \"phi\", \"psi\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6becc3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cumulative energy\n",
+    "cs = 1.0 / np.sum(s**2)\n",
+    "cs *= np.cumsum(s**2)\n",
+    "# Number of principal components\n",
+    "eps = 1e-5\n",
+    "rom_dim = np.where(cs > 1-eps)[0][0]+1\n",
+    "rom_dim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f4b3319",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pltt.cum_energy(\n",
+    "  cs[:rom_dims[-1]],\n",
+    "  figname=paths[\"data\"]+\"/figs/bases/cum_en.png\",\n",
+    "  save=saving,\n",
+    "  show=showing\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bccdbe34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(rom_dims[-1]):\n",
+    "  nb = str(i+1)\n",
+    "  for (name, basis) in ((\"phi\", phi), (\"psi\", psi)):\n",
+    "    pltt.dist_2d(\n",
+    "      x=ei,\n",
+    "      y=basis[:,i],\n",
+    "      labels=[r\"$\\epsilon_i$ [eV]\", r\"$\\%s_{%s}$\" % (name, nb)],\n",
+    "      scales=[\"linear\", \"linear\"],\n",
+    "      figname=paths[\"data\"] + f\"/figs/bases/{name}_{nb.zfill(2)}.png\",\n",
+    "      save=saving,\n",
+    "      show=showing\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fa33b96",
+   "metadata": {},
+   "source": [
+    "FOM and ROM solutions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b98a65dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = get_tgrid(tgrid[\"lim\"], tgrid[\"pts\"])\n",
+    "i = np.argwhere(t >= 1e-9)[0][0]\n",
+    "j = np.argwhere(t >= 1e-3)[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2132434",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for (name, (T, p, Xa)) in ic.items():\n",
+    "  y0 = get_y0(model, T, p, Xa)\n",
+    "  yfom = solve_fom(model, t, *y0)\n",
+    "  for r in rom_dims:\n",
+    "    yrom = solve_rom(model, t, *y0, phi, psi, r)\n",
+    "    # Postprocessing\n",
+    "    path = paths[\"data\"]+f\"/figs/sol/{name}_r{r}/\"\n",
+    "    os.makedirs(path, exist_ok=True)\n",
+    "    plot_moments(\n",
+    "      path,\n",
+    "      t[i:j],\n",
+    "      yfom[1][:,i:j],\n",
+    "      yrom[1][:,i:j],\n",
+    "      ei.reshape(-1,1),\n",
+    "      max_mom=11\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb10aabc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b2a2dbb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ceb2703a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8629659",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_tgrid(t_lim, num):\n",
+    "  t = np.geomspace(*t_lim, num=num-1)\n",
+    "  t = np.insert(t, 0, 0.0)\n",
+    "  return t\n",
+    "\n",
+    "def get_y0(T, p, Xa):\n",
+    "  n = p / (const.UKB * T)\n",
+    "  na = np.array([n * Xa]).reshape(-1)\n",
+    "  qm = sp_mol.q_int(T)\n",
+    "  nm = n * (1-Xa) * qm / np.sum(qm)\n",
+    "  return na, nm\n",
+    "\n",
+    "def compute_fom(t, na_0, nm_0):\n",
+    "  y0 = np.concatenate([na_0, nm_0])\n",
+    "  y = model.solve(t, y0, ops=model.fom_ops, rtol=1e-7, atol=0.0)\n",
+    "  return y[:1], y[1:]\n",
+    "\n",
+    "def compute_rom(t, na_0, nm_0, r=5):\n",
+    "  # Update operators\n",
+    "  model.set_basis(phi=phi[:,:r], psi=psi[:,:r])\n",
+    "  model.update_rom_ops()\n",
+    "  # Solve\n",
+    "  y0 = np.concatenate([na_0, model.psi.T @ nm_0])\n",
+    "  y = model.solve(t, y0, ops=model.rom_ops, rtol=1e-7, atol=0.0)\n",
+    "  return y[:1], model.phi @ y[1:]"
    ]
   },
   {
@@ -203,83 +357,23 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b2ae8c12",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b695309",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Balanced POD"
+    "s[:5]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11be0f63",
+   "id": "bac3f3c6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "s, phi, psi = [\n",
-    "  torch.load(paths[\"bpod\"]+f\"/{k}.pt\").numpy() for k in (\"s\", \"phi\", \"psi\")\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e99dd197",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cs = 1.0 / np.sum(s**2)\n",
-    "cs *= np.cumsum(s**2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c6becc3c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Number of principal components\n",
-    "eps = 1e-5\n",
-    "romdim = np.where(cs > 1-eps)[0][0]+1\n",
-    "romdim"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f4b3319",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dimmax = 20\n",
-    "plot_cumenergy(\n",
-    "  cs[:dimmax],\n",
-    "  filename=paths[\"bpod\"] + \"/figs/cum_en.png\",\n",
-    "  save=saving,\n",
-    "  show=showing\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bccdbe34",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(dimmax):\n",
-    "  nb = str(i+1)\n",
-    "  plot_2D(\n",
-    "    x=sp_mol.lev['e']/const.eV_to_J,\n",
-    "    y_true=phi[:,i],\n",
-    "    labels=[r\"$\\epsilon_i$ [eV]\", r\"$\\psi_{{%s}}$\" % nb],\n",
-    "    scales=[\"linear\", \"linear\"],\n",
-    "    filename=paths[\"bpod\"] + f\"/figs/phi_{nb.zfill(2)}.png\",\n",
-    "    save=saving,\n",
-    "    show=showing\n",
-    "  )"
+    "phi[:,:5].imag"
    ]
   },
   {
@@ -309,6 +403,16 @@
    "source": [
     "model.set_basis(phi=phi[:,:rom_dim], psi=psi[:,:rom_dim])\n",
     "model.update_rom_ops()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f08ab4fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.psi.T @ nm_0"
    ]
   },
   {
@@ -434,7 +538,7 @@
     "    y_true=nm[:,i] / sp_mol.lev[\"g\"],\n",
     "    y_pred=nm_pred[:,i] / sp_mol.lev[\"g\"],\n",
     "    scales=[\"linear\", \"log\"],\n",
-    "    filename=paths[\"bpod\"] + f\"/figs/sol_2d_i{str(i).zfill(4)}_rom.png\",\n",
+    "    filename=paths[\"data\"] + f\"/figs/sol_2d_i{str(i).zfill(4)}_rom.png\",\n",
     "    save=saving,\n",
     "    show=showing\n",
     "  )"
@@ -468,7 +572,7 @@
     "#   y=y,\n",
     "#   frames=50,\n",
     "#   fps=10,\n",
-    "#   filename=paths[\"bpod\"] + f\"/figs/lev_dist_T0{int(ic['T'])}K_r{rom_dim}.gif\",\n",
+    "#   filename=paths[\"data\"] + f\"/figs/lev_dist_T0{int(ic['T'])}K_r{rom_dim}.gif\",\n",
     "#   save=saving,\n",
     "#   show=showing\n",
     "# )"
