--- a/examples/VS_O3_O4/scripts/test.ipynb
+++ b/examples/VS_O3_O4/scripts/test.ipynb
@@ -82,12 +82,15 @@
     "  \"cold\": [1e-8, 1e-7, 7e-7, 3e-6, 1e-4],\n",
     "  \"hot\":  [1e-7, 1e-6, 4e-6, 2e-5, 1e-3]\n",
     "}\n",
-    "rom_dims = list(range(8,15,2))\n",
+    "# rom_dims = list(range(8,15,2))\n",
+    "rom_dims = list(range(4,7))\n",
     "# Paths\n",
     "paths = {\n",
     "  \"dtb\": \"./../database/\",\n",
-    "  \"data\": \"./data/\"\n",
-    "}"
+    "  \"data\": \"./data/max_mom_2/\"\n",
+    "}\n",
+    "# Plotting distribution\n",
+    "pltt_dist = False"
    ]
   },
   {
@@ -242,10 +245,11 @@
     "    os.makedirs(path, exist_ok=True)\n",
     "    # > Moments\n",
     "    plot_moments(path, t, yfom[1], yrom[1], ei.reshape(-1,1), max_mom=5)\n",
-    "    # > Distribution static\n",
-    "    plot_dist(path, teval[name], t, yfom[1], yrom[1], ei, gi)\n",
-    "    # > Distribution dynamic\n",
-    "    animate_dist(path, t, yfom[1], yrom[1], ei, gi)"
+    "    if pltt_dist:\n",
+    "      # > Distribution static\n",
+    "      plot_dist(path, teval[name], t, yfom[1], yrom[1], ei, gi)\n",
+    "      # > Distribution dynamic\n",
+    "      animate_dist(path, t, yfom[1], yrom[1], ei, gi)"
    ]
   }
  ],
