--- a/examples/VS_O3_O4/scripts/test.ipynb
+++ b/examples/VS_O3_O4/scripts/test.ipynb
@@ -58,7 +58,8 @@
    "id": "alternate-creature",
    "metadata": {},
    "source": [
-    "Define inputs"
+    "Define inputs\n",
+    "> System"
    ]
   },
   {
@@ -68,7 +69,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# System\n",
     "T = 1e4\n",
     "ic = {\n",
     "  \"cold\": [5e2, 1e3, 5e-2],\n",
@@ -81,16 +81,49 @@
     "teval = {\n",
     "  \"cold\": [1e-8, 1e-7, 7e-7, 3e-6, 1e-4],\n",
     "  \"hot\":  [1e-7, 1e-6, 4e-6, 2e-5, 1e-3]\n",
-    "}\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64a87338",
+   "metadata": {},
+   "source": [
+    "> ROM models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e43ade78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# rom_dims = list(range(8,15,2))\n",
+    "# max_mom = 0\n",
     "rom_dims = list(range(4,7))\n",
-    "# Paths\n",
+    "max_mom = 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1268e253",
+   "metadata": {},
+   "source": [
+    "> Paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d82caec9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "paths = {\n",
     "  \"dtb\": \"./../database/\",\n",
-    "  \"data\": \"./data/max_mom_2/\"\n",
-    "}\n",
-    "# Plotting distribution\n",
-    "pltt_dist = False"
+    "  \"data\": f\"./data/max_mom_{max_mom}/\"\n",
+    "}"
    ]
   },
   {
@@ -152,7 +185,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.makedirs(paths[\"data\"]+\"/figs/bases/\", exist_ok=True)"
+    "path = paths[\"data\"]+\"/figs/bases/\"\n",
+    "os.makedirs(path, exist_ok=True)"
    ]
   },
   {
@@ -191,7 +225,7 @@
    "source": [
     "pltt.cum_energy(\n",
     "  cs[:rom_dims[-1]],\n",
-    "  figname=paths[\"data\"]+\"/figs/bases/cum_en.png\",\n",
+    "  figname=path + \"/cum_en\",\n",
     "  save=True,\n",
     "  show=False\n",
     ")"
@@ -212,7 +246,7 @@
     "      y=basis[:,i],\n",
     "      labels=[r\"$\\epsilon_i$ [eV]\", r\"$\\%s_{%s}$\" % (name, nb)],\n",
     "      scales=[\"linear\", \"linear\"],\n",
-    "      figname=paths[\"data\"] + f\"/figs/bases/{name}_{nb.zfill(2)}.png\",\n",
+    "      figname=path + f\"/{name}_{nb.zfill(2)}\",\n",
     "      save=True,\n",
     "      show=False\n",
     "    )"
@@ -245,11 +279,10 @@
     "    os.makedirs(path, exist_ok=True)\n",
     "    # > Moments\n",
     "    plot_moments(path, t, yfom[1], yrom[1], ei.reshape(-1,1), max_mom=5)\n",
-    "    if pltt_dist:\n",
-    "      # > Distribution static\n",
-    "      plot_dist(path, teval[name], t, yfom[1], yrom[1], ei, gi)\n",
-    "      # > Distribution dynamic\n",
-    "      animate_dist(path, t, yfom[1], yrom[1], ei, gi)"
+    "    # > Distribution static\n",
+    "    plot_dist(path, teval[name], t, yfom[1], yrom[1], ei, gi)\n",
+    "    # > Distribution dynamic\n",
+    "    animate_dist(path, t, yfom[1], yrom[1], ei, gi)"
    ]
   }
  ],
