--- a/examples/RVS_O3/scripts/test.ipynb
+++ b/examples/RVS_O3/scripts/test.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2c8ff0da",
    "metadata": {},
    "outputs": [],
@@ -20,6 +20,7 @@
     "import importlib\n",
     "if (importlib.util.find_spec(\"ronek\") is None):\n",
     "  sys.path.append(\"./../../../\")\n",
+    "sys.path.append(\"../../utils/\")\n",
     "\n",
     "from ronek import env\n",
     "env.set(\n",
@@ -40,14 +41,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8dba1102",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "from utils import *\n",
+    "from solving import *\n",
+    "# from plott import *\n",
     "from ronek import const\n",
     "from ronek.systems import TAFASystem\n",
     "from silx.io.dictdump import h5todict"
