--- a/examples/VS_O3_O4/scripts/test.ipynb
+++ b/examples/VS_O3_O4/scripts/test.ipynb
@@ -20,6 +20,7 @@
     "import importlib\n",
     "if (importlib.util.find_spec(\"ronek\") is None):\n",
     "  sys.path.append(\"./../../../\")\n",
+    "sys.path.append(\"./../../\")\n",
     "\n",
     "from ronek import env\n",
     "env.set(\n",
@@ -46,6 +47,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import ronek.postproc.plotting as pltt\n",
     "\n",
     "from utils import *\n",
     "from ronek import const\n",
@@ -99,10 +101,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# rom_dims = list(range(8,15,2))\n",
-    "# max_mom = 0\n",
-    "rom_dims = list(range(4,7))\n",
-    "max_mom = 2"
+    "rom_dims = list(range(12,16))\n",
+    "max_mom = 0\n",
+    "# rom_dims = list(range(4,8))\n",
+    "# max_mom = 2"
    ]
   },
   {
