--- a/examples/RVS_O3/scripts/test.ipynb
+++ b/examples/RVS_O3/scripts/test.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2c8ff0da",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
     "import importlib\n",
     "if (importlib.util.find_spec(\"ronek\") is None):\n",
     "  sys.path.append(\"./../../../\")\n",
-    "sys.path.append(\"../../utils/\")\n",
+    "sys.path.append(\"./../../\")\n",
     "\n",
     "from ronek import env\n",
     "env.set(\n",
@@ -41,15 +41,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "8dba1102",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import ronek.postproc.plotting as pltt\n",
     "\n",
-    "from solving import *\n",
-    "# from plott import *\n",
+    "from utils import *\n",
     "from ronek import const\n",
     "from ronek.systems import TAFASystem\n",
     "from silx.io.dictdump import h5todict"
@@ -101,10 +101,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# rom_dims = list(range(8,15,2))\n",
-    "# max_mom = 0\n",
-    "rom_dims = list(range(4,7))\n",
-    "max_mom = 2"
+    "rom_dims = list(range(12,16))\n",
+    "max_mom = 0\n",
+    "# rom_dims = list(range(4,8))\n",
+    "# max_mom = 2"
    ]
   },
   {
