--- a/examples/RVS_O3/scripts/test.ipynb
+++ b/examples/RVS_O3/scripts/test.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "from utils import *\n",
     "from ronek import const\n",
-    "from ronek.systems import TAFASystem\n",
+    "from ronek.systems import TASystem\n",
     "from silx.io.dictdump import h5todict"
    ]
   },
@@ -143,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = TAFASystem(\n",
+    "model = TASystem(\n",
     "  rates=paths[\"dtb\"] + \"/kinetics.hdf5\",\n",
     "  species={\n",
     "    k: paths[\"dtb\"] + f\"/species/{k}.json\" for k in (\"atom\", \"molecule\")\n",
