--- a/examples/RVS_O3/database/utils/compose_kinetics.ipynb
+++ b/examples/RVS_O3/database/utils/compose_kinetics.ipynb
@@ -88,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ma_dtb = kinetics['Arrhenius']"
+    "ma_dtb = kinetics['T_10000_10000']['Rates']"
    ]
   },
   {
@@ -108,15 +108,26 @@
     "    shape = (nb_states,1,nb_states,1)\n",
     "    # Remove endothermic processes\n",
     "    triu_i = np.triu_indices(nb_states)\n",
-    "    rates[\"A\"][triu_i[0],triu_i[1]] = 0.0\n",
+    "    rates[triu_i[0],triu_i[1]] = 0.0\n",
     "  else:\n",
     "    continue\n",
-    "  # Reshape\n",
-    "  rates = {k: p.reshape(shape) for (k, p) in rates.items()}\n",
-    "  # Rescale\n",
-    "  rates[\"A\"] *= cm3_to_m3\n",
+    "  # Reshape and rescale\n",
+    "  rates = rates.reshape(shape) * cm3_to_m3\n",
     "  # Store\n",
     "  kin_dtb[\"m-a\"][p] = rates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3ad37684",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set Arrhenius parameters\n",
+    "for (p, rates) in kin_dtb[\"m-a\"].items():\n",
+    "  zeros = np.zeros_like(rates)\n",
+    "  kin_dtb[\"m-a\"][p] = {\"A\": rates, \"beta\": zeros, \"Ta\": zeros}"
    ]
   },
   {
@@ -129,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "c657093f",
    "metadata": {},
    "outputs": [],
