--- a/examples/RVS_O3/database/utils/compose_species.ipynb
+++ b/examples/RVS_O3/database/utils/compose_species.ipynb
@@ -120,8 +120,7 @@
    "outputs": [],
    "source": [
     "# Energies\n",
-    "ei = levels[\"E\"] - np.amin(levels[\"E\"])\n",
-    "ei *= eV_to_J\n",
+    "ei = (levels[\"E\"] - np.amin(levels[\"E\"])) * eV_to_J\n",
     "# Degeneracies\n",
     "gi = levels[\"g\"]"
    ]
