--- a/examples/RVS_O3/scripts/test.ipynb
+++ b/examples/RVS_O3/scripts/test.ipynb
@@ -101,10 +101,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rom_dims = list(range(12,16))\n",
-    "max_mom = 0\n",
-    "# rom_dims = list(range(4,8))\n",
-    "# max_mom = 2"
+    "# rom_dims = list(range(12,16))\n",
+    "# max_mom = 0\n",
+    "rom_dims = list(range(4,8))\n",
+    "max_mom = 2"
    ]
   },
   {
