--- a/examples/VS_O3_O4/database/utils/compose_kinetics.ipynb
+++ b/examples/VS_O3_O4/database/utils/compose_kinetics.ipynb
@@ -10,6 +10,7 @@
     "import os\n",
     "import json\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
     "from silx.io.dictdump import h5todict, dicttoh5"
    ]
@@ -17,6 +18,20 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "a34730d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import constants\n",
+    "from scipy.constants import physical_constants as pc\n",
+    "UNA = pc[\"Avogadro constant\"][0]\n",
+    "UKB = pc[\"Boltzmann constant\"][0]\n",
+    "eV_to_J = constants.eV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "6511bd45",
    "metadata": {},
    "outputs": [],
@@ -34,23 +49,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "d1d709e8-d714-466b-aa2f-bfd235333a83",
    "metadata": {},
    "outputs": [],
    "source": [
+    "T = 1e4\n",
     "nb_states = 45\n",
     "# Databases\n",
     "kin_file = {\n",
     "  \"RVS\": \"/home/zanardi/Workspace/AirDatabase/HDF5/QCT/Orig/O3_UMN.hdf5\",\n",
     "  \"VS\": \"/home/zanardi/Workspace/AirDatabase/HDF5/QCT/Orig/O4_UMN_VSM.hdf5\"\n",
     "}\n",
-    "mol_file = \"./../species/molecule.json\""
+    "mol_file = \"./../species/molecule.json\"\n",
+    "lev_file = \"/home/zanardi/Codes/TC/HyperNet/database/levels/O3_UMN/O2.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "7fa29e71",
    "metadata": {},
    "outputs": [],
@@ -58,27 +75,6 @@
     "# Save path\n",
     "out_path = \"./../\"\n",
     "os.makedirs(out_path, exist_ok=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "df83f90c",
-   "metadata": {},
-   "source": [
-    "Read databases"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "8dd46cb9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kinetics = {k: h5todict(filename) for (k, filename) in kin_file.items()}\n",
-    "with open(mol_file, 'r') as file:\n",
-    "  molecule = json.load(file)\n",
-    "ei = np.array(molecule[\"lev\"][\"e\"])"
    ]
   },
   {
@@ -96,7 +92,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kin_dtb = {}"
+    "kin_dtb = {}\n",
+    "kinetics = {k: h5todict(filename) for (k, filename) in kin_file.items()}"
    ]
   },
   {
@@ -110,37 +107,94 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fba4ae55",
+   "id": "b19e21af",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ma_dtb = kinetics['RVS'][\"CGRates\"][\"VS45\"]['Arrhenius']"
+    "def get_mapping(vqn):\n",
+    "  lev_to_bin = np.zeros_like(vqn)\n",
+    "  vmin, vmax = int(np.amin(vqn)), int(np.amax(vqn))\n",
+    "  for (i, vi) in enumerate(range(vmin, vmax+1)):\n",
+    "    lev_to_bin[vqn == vi] = i\n",
+    "  lev_to_bin -= np.amin(lev_to_bin)\n",
+    "  return lev_to_bin.astype(np.int32)\n",
+    "\n",
+    "def construct_prob_mat(vqn):\n",
+    "  mapping = get_mapping(vqn)\n",
+    "  mapping -= np.amin(mapping)\n",
+    "  nb_lev = len(mapping)\n",
+    "  nb_comp = np.amax(mapping) + 1\n",
+    "  indices = (np.arange(nb_lev), mapping)\n",
+    "  P = np.zeros((nb_lev, nb_comp), dtype=int)\n",
+    "  P[indices] = 1\n",
+    "  return P\n",
+    "\n",
+    "def q_int(g, e, T):\n",
+    "  return g * np.exp(-e/(UKB*T))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a2d1367f",
+   "id": "b95e1855",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "levels = pd.read_csv(lev_file)\n",
+    "vqn, g, e = [levels[k].to_numpy() for k in (\"vqn\", \"g\", \"E\")]\n",
+    "e = (e-np.amin(e))*eV_to_J"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "56379c22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "P = construct_prob_mat(vqn)\n",
+    "Pq = P * q_int(g, e, T).reshape(-1,1)\n",
+    "Pq /= np.sum(Pq, axis=0, keepdims=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9217bfd5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ma_dtb = kinetics['RVS'][f'T_{int(T)}_{int(T)}'][\"Rates\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3f687bcf",
    "metadata": {},
    "outputs": [],
    "source": [
     "kin_dtb[\"m-a\"] = {}\n",
     "for (k, rates) in ma_dtb.items():\n",
-    "  if (k == \"Proc6\"):\n",
-    "    continue\n",
-    "  if (k == \"Proc2\"):\n",
+    "  if (k == \"Diss_Corr\"):\n",
     "    p = \"d\"\n",
     "    shape = (nb_states,1,1,1,1)\n",
-    "  else:\n",
+    "    # Project\n",
+    "    rates = Pq.T @ rates\n",
+    "  elif (k == \"Excit\"):\n",
     "    p = \"e\"\n",
     "    shape = (nb_states,1,nb_states,1)\n",
+    "    # Project\n",
+    "    triu_i = np.triu_indices(rates.shape[0])\n",
+    "    rates[triu_i[0],triu_i[1]] = 0.0\n",
+    "    rates = Pq.T @ rates @ P\n",
     "    # Remove endothermic processes\n",
     "    triu_i = np.triu_indices(nb_states)\n",
-    "    rates[\"A\"][triu_i[0],triu_i[1]] = 0.0\n",
-    "  # Reshape\n",
-    "  rates = {k: p.reshape(shape) for (k, p) in rates.items()}\n",
-    "  # Rescale\n",
-    "  rates[\"A\"] *= cm3_to_m3\n",
+    "    rates[triu_i[0],triu_i[1]] = 0.0\n",
+    "  else:\n",
+    "    continue\n",
+    "  # Reshape and rescale\n",
+    "  rates = rates.reshape(shape) * cm3_to_m3\n",
     "  # Store\n",
     "  kin_dtb[\"m-a\"][p] = rates"
    ]
@@ -155,17 +209,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "7bce42aa",
+   "execution_count": 12,
+   "id": "d171c9cc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mm_dtb = kinetics['VS'][\"T_10000_10000\"][\"Rates\"]"
+    "with open(mol_file, 'r') as file:\n",
+    "  molecule = json.load(file)\n",
+    "ei = np.array(molecule[\"lev\"][\"e\"])\n",
+    "eij = ei.reshape(1,-1) + ei.reshape(-1,1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
+   "id": "7bce42aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mm_dtb = kinetics['VS'][f'T_{int(T)}_{int(T)}'][\"Rates\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "51195ed3",
    "metadata": {},
    "outputs": [],
@@ -184,7 +251,6 @@
     "    p = \"e\"\n",
     "    shape = tuple([nb_states]*4)\n",
     "    # Remove endothermic processes\n",
-    "    eij = ei.reshape(1,-1) + ei.reshape(-1,1)\n",
     "    for i in range(nb_states):\n",
     "      for j in range(nb_states):\n",
     "        rates[i,j][eij[i,j] <= eij] = 0.0\n",
@@ -198,16 +264,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aa32e25f",
+   "metadata": {},
+   "source": [
+    "> Set Arrhenius parameters"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "5af48b91",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set Arrhenius parameters\n",
-    "for (p, rates) in kin_dtb[\"m-m\"].items():\n",
-    "  zeros = np.zeros_like(rates)\n",
-    "  kin_dtb[\"m-m\"][p] = {\"A\": rates, \"beta\": zeros, \"Ta\": zeros}"
+    "for c in kin_dtb.keys():\n",
+    "  for p in kin_dtb[c].keys():\n",
+    "    zeros = np.zeros_like(kin_dtb[c][p])\n",
+    "    kin_dtb[c][p] = {\"A\": kin_dtb[c][p], \"beta\": zeros, \"Ta\": zeros}"
    ]
   },
   {
@@ -220,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "c657093f",
    "metadata": {},
    "outputs": [],
