--- a/examples/RVS_O3/scripts/test.ipynb
+++ b/examples/RVS_O3/scripts/test.ipynb
@@ -102,9 +102,9 @@
    "outputs": [],
    "source": [
     "# rom_dims = list(range(12,16))\n",
-    "# max_mom = 0\n",
+    "max_mom = 0\n",
     "rom_dims = list(range(4,8))\n",
-    "max_mom = 2"
+    "# max_mom = 2"
    ]
   },
   {
@@ -213,7 +213,7 @@
     "cs = 1.0 / np.sum(s**2)\n",
     "cs *= np.cumsum(s**2)\n",
     "# Number of principal components\n",
-    "eps = 1e-5\n",
+    "eps = 1e-6\n",
     "rom_dim = np.where(cs > 1-eps)[0][0]+1\n",
     "rom_dim"
    ]
