--- a/examples/RVS_O3/scripts/test.ipynb
+++ b/examples/RVS_O3/scripts/test.ipynb
@@ -101,9 +101,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rom_dims = list(range(12,16))\n",
-    "max_mom = 0\n",
-    "# rom_dims = list(range(4,8))\n",
+    "rom_dims = list(range(28,41,2))\n",
+    "max_mom = 20\n",
+    "# rom_dims = list(range(5,11,1))\n",
     "# max_mom = 2"
    ]
   },
@@ -248,6 +248,7 @@
     "      y=basis[:,i],\n",
     "      labels=[r\"$\\epsilon_i$ [eV]\", r\"$\\%s_{%s}$\" % (name, nb)],\n",
     "      scales=[\"linear\", \"linear\"],\n",
+    "      markersize=1,\n",
     "      figname=path + f\"/{name}_{nb.zfill(2)}\",\n",
     "      save=True,\n",
     "      show=False\n",
@@ -273,16 +274,19 @@
     "for (name, (T, p, Xa)) in ic.items():\n",
     "  y0 = get_y0(model, T, p, Xa)\n",
     "  # Solving\n",
+    "  print(f\"> Solving FOM for '{name}' test case ...\")\n",
     "  yfom = solve_fom(model, t, y0)\n",
     "  for r in rom_dims:\n",
+    "    print(f\"  > Solving ROM for '{name}' test case with {r} dimensions ...\")\n",
     "    yrom = solve_rom(model, t, y0, phi, psi, r, abs=False)\n",
     "    # Postprocessing\n",
+    "    print(f\"  > Postprocessing FOM and ROM solutions ...\")\n",
     "    path = paths[\"data\"] + f\"/figs/sol/{name}_r{r}/\"\n",
     "    os.makedirs(path, exist_ok=True)\n",
     "    # > Moments\n",
     "    plot_moments(path, t, yfom[1], yrom[1], ei.reshape(-1,1), max_mom=2)\n",
     "    # > Distribution static\n",
-    "    plot_dist(path, teval[name], t, yfom[1], yrom[1], ei, gi)\n",
+    "    plot_dist(path, teval[name], t, yfom[1], yrom[1], ei, gi, markersize=1)\n",
     "    # > Distribution dynamic\n",
     "    animate_dist(path, t, yfom[1], yrom[1], ei, gi)"
    ]
