--- a/examples/VS_O3_O4/scripts/test.ipynb
+++ b/examples/VS_O3_O4/scripts/test.ipynb
@@ -26,7 +26,7 @@
     "env.set(\n",
     "  device=\"cpu\",\n",
     "  device_idx=0,\n",
-    "  nb_threads=8,\n",
+    "  nb_threads=16,\n",
     "  floatx=\"float64\"\n",
     ")"
    ]
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2132434",
+   "id": "0a514ca3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,10 +273,13 @@
     "for (name, (T, p, Xa)) in ic.items():\n",
     "  y0 = get_y0(model, T, p, Xa)\n",
     "  # Solving\n",
+    "  print(f\"> Solving FOM for '{name}' test case ...\")\n",
     "  yfom = solve_fom(model, t, y0)\n",
     "  for r in rom_dims:\n",
+    "    print(f\"  > Solving ROM for '{name}' test case with {r} dimensions ...\")\n",
     "    yrom = solve_rom(model, t, y0, phi, psi, r, abs=False)\n",
     "    # Postprocessing\n",
+    "    print(f\"  > Postprocessing FOM and ROM solutions ...\")\n",
     "    path = paths[\"data\"] + f\"/figs/sol/{name}_r{r}/\"\n",
     "    os.makedirs(path, exist_ok=True)\n",
     "    # > Moments\n",
