--- a/examples/RVS_O3/scripts/test.ipynb
+++ b/examples/RVS_O3/scripts/test.ipynb
@@ -101,9 +101,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rom_dims = list(range(28,41,2))\n",
-    "max_mom = 20\n",
-    "# rom_dims = list(range(5,11,1))\n",
+    "rom_dims = list(range(30,41))\n",
+    "max_mom = 10\n",
+    "# rom_dims = list(range(5,11))\n",
     "# max_mom = 2"
    ]
   },
@@ -288,7 +288,7 @@
     "    # > Distribution static\n",
     "    plot_dist(path, teval[name], t, yfom[1], yrom[1], ei, gi, markersize=1)\n",
     "    # > Distribution dynamic\n",
-    "    animate_dist(path, t, yfom[1], yrom[1], ei, gi)"
+    "    animate_dist(path, t, yfom[1], yrom[1], ei, gi, markersize=1)"
    ]
   }
  ],
