--- a/examples/VS_O3_O4/database/utils/compose_species.ipynb
+++ b/examples/VS_O3_O4/database/utils/compose_species.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a1ba1c77",
    "metadata": {},
    "outputs": [],
@@ -15,13 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f3bb5b5d",
    "metadata": {},
    "outputs": [],
    "source": [
     "from scipy import constants\n",
     "from scipy.constants import physical_constants as pc\n",
+    "UKB = pc[\"Boltzmann constant\"][0]\n",
     "UNA = pc[\"Avogadro constant\"][0]\n",
     "eV_to_J = constants.eV"
    ]
@@ -36,17 +37,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d1d709e8-d714-466b-aa2f-bfd235333a83",
    "metadata": {},
    "outputs": [],
    "source": [
+    "T = 1e4\n",
     "lev_file = \"/home/zanardi/Codes/TC/HyperNet/database/levels/O3_UMN/O2.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "7fa29e71",
    "metadata": {},
    "outputs": [],
@@ -67,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "3a315729",
    "metadata": {},
    "outputs": [],
@@ -85,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "769edad8",
    "metadata": {},
    "outputs": [],
@@ -104,35 +106,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "8eacb16a",
    "metadata": {},
    "outputs": [],
    "source": [
     "levels = pd.read_csv(lev_file)\n",
-    "vqn, evib = [levels[k].to_numpy() for k in (\"vqn\", \"EVib\")]"
+    "vqn, g, e, evib = [levels[k].to_numpy() for k in (\"vqn\", \"g\", \"E\", \"EVib\")]\n",
+    "# Energies\n",
+    "e = (e-np.amin(e)) * eV_to_J\n",
+    "evib = (evib-np.amin(evib)) * eV_to_J"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "92298a49",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Energies\n",
-    "ei = []\n",
-    "for vi in range(np.amax(vqn)+1):\n",
-    "  ei.append(evib[vqn == vi][0])\n",
-    "ei = np.array(ei) - ei[0]\n",
-    "ei *= eV_to_J\n",
-    "# Degeneracies\n",
-    "gi = np.full(ei.shape, 3.0)"
+    "# # Energies\n",
+    "# ei = []\n",
+    "# for vi in range(np.amax(vqn)+1):\n",
+    "#   ei.append(evib[vqn == vi][0])\n",
+    "# ei = np.array(ei) - ei[0]\n",
+    "# ei *= eV_to_J\n",
+    "# # Degeneracies\n",
+    "# gi = np.full(ei.shape, 3.0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "id": "dd7eeb1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_mapping(vqn):\n",
+    "  lev_to_bin = np.zeros_like(vqn)\n",
+    "  vmin, vmax = int(np.amin(vqn)), int(np.amax(vqn))\n",
+    "  for (i, vi) in enumerate(range(vmin, vmax+1)):\n",
+    "    lev_to_bin[vqn == vi] = i\n",
+    "  lev_to_bin -= np.amin(lev_to_bin)\n",
+    "  return lev_to_bin.astype(np.int32)\n",
+    "\n",
+    "def construct_prob_mat(vqn):\n",
+    "  mapping = get_mapping(vqn)\n",
+    "  mapping -= np.amin(mapping)\n",
+    "  nb_lev = len(mapping)\n",
+    "  nb_comp = np.amax(mapping) + 1\n",
+    "  indices = (np.arange(nb_lev), mapping)\n",
+    "  P = np.zeros((nb_lev, nb_comp))\n",
+    "  P[indices] = 1.0\n",
+    "  return P\n",
+    "\n",
+    "def q_int(g, e, T):\n",
+    "  return g * np.exp(-e/(UKB*T))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6096c90c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "P = construct_prob_mat(vqn)\n",
+    "q = q_int(g, e, T)\n",
+    "Q = P.T @ q\n",
+    "P *= q.reshape(-1,1) / Q.reshape(1,-1)\n",
+    "ei = P.T @ e\n",
+    "gi = np.exp(ei/(UKB*T)) * Q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "206214d1",
    "metadata": {},
    "outputs": [],
@@ -150,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "9a40206a",
    "metadata": {},
    "outputs": [],
