--- a/examples/VS_O3_O4/database/utils/compose_species.ipynb
+++ b/examples/VS_O3_O4/database/utils/compose_species.ipynb
@@ -176,7 +176,7 @@
     "Q = P.T @ q\n",
     "P *= q.reshape(-1,1) / Q.reshape(1,-1)\n",
     "ei = P.T @ e\n",
-    "gi = np.exp(ei/(UKB*T)) * Q"
+    "gi = Q * np.exp(ei/(UKB*T))"
    ]
   },
   {
