--- a/examples/VS_O3_O4/scripts/test.ipynb
+++ b/examples/VS_O3_O4/scripts/test.ipynb
@@ -73,16 +73,18 @@
    "source": [
     "T = 1e4\n",
     "ic = {\n",
-    "  \"cold\": [5e2, 1e3, 5e-2],\n",
-    "  \"hot\":  [3e3, 1e3, 5e-2]\n",
+    "  \"T1\": [5e2, 1e3, 5e-2],\n",
+    "  \"T2\": [2e3, 1e3, 5e-2],\n",
+    "  \"T3\": [4e3, 1e3, 5e-2]\n",
     "}\n",
     "tgrid = {\n",
     "  \"lim\": [1e-9, 1e-3],\n",
     "  \"num\": 501\n",
     "}\n",
     "teval = {\n",
-    "  \"cold\": [1e-8, 1e-7, 7e-7, 3e-6, 1e-4],\n",
-    "  \"hot\":  [1e-7, 1e-6, 4e-6, 2e-5, 1e-3]\n",
+    "  \"T1\": [1e-8, 1e-7, 7e-7, 3e-6, 1e-4],\n",
+    "  \"T2\": [1e-7, 1e-6, 4e-6, 1e-5, 1e-4],\n",
+    "  \"T3\": [1e-7, 1e-6, 4e-6, 2e-5, 1e-3]\n",
     "}"
    ]
   },
@@ -101,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rom_dims = list(range(12,16))\n",
+    "rom_dims = list(range(13,17))\n",
     "max_mom = 10\n",
     "# rom_dims = list(range(4,8))\n",
     "# max_mom = 2"
@@ -277,7 +279,7 @@
     "  yfom = solve_fom(model, t, y0)\n",
     "  for r in rom_dims:\n",
     "    print(f\"  > Solving ROM for '{name}' test case with {r} dimensions ...\")\n",
-    "    yrom = solve_rom(model, t, y0, phi, psi, r, abs=False)\n",
+    "    yrom = solve_rom(model, t, y0, phi[:,:r], psi[:,:r])\n",
     "    # Postprocessing\n",
     "    print(f\"  > Postprocessing FOM and ROM solutions ...\")\n",
     "    path = paths[\"data\"] + f\"/figs/sol/{name}_r{r}/\"\n",
@@ -286,8 +288,9 @@
     "    plot_moments(path, t, yfom[1], yrom[1], ei.reshape(-1,1), max_mom=2)\n",
     "    # > Distribution static\n",
     "    plot_dist(path, teval[name], t, yfom[1], yrom[1], ei, gi)\n",
-    "    # > Distribution dynamic\n",
-    "    animate_dist(path, t, yfom[1], yrom[1], ei, gi)"
+    "    if (max_mom > 2):\n",
+    "      # > Distribution dynamic\n",
+    "      animate_dist(path, t, yfom[1], yrom[1], ei, gi)"
    ]
   }
  ],
