--- a/examples/VC_O3_O4/scripts/pod.ipynb
+++ b/examples/VC_O3_O4/scripts/pod.ipynb
@@ -19,7 +19,7 @@
     "import sys\n",
     "import importlib\n",
     "if (importlib.util.find_spec(\"ronek\") is None):\n",
-    "  sys.path.append(\"./../../../../ronek/\")\n",
+    "  sys.path.append(\"./../../../\")\n",
     "sys.path.append(\"./../../\")\n",
     "\n",
     "from ronek import env\n",
