--- a/examples/VC_O3_O4/scripts/pod.ipynb
+++ b/examples/VC_O3_O4/scripts/pod.ipynb
@@ -19,7 +19,7 @@
     "import sys\n",
     "import importlib\n",
     "if (importlib.util.find_spec(\"ronek\") is None):\n",
-    "  sys.path.append(\"./../../../\")\n",
+    "  sys.path.append(\"./../../../../ronek/\")\n",
     "sys.path.append(\"./../../\")\n",
     "\n",
     "from ronek import env\n",
@@ -255,10 +255,12 @@
     "  ax = fig.add_subplot()\n",
     "  # x axis\n",
     "  ax.set_xlabel(\"$r$\")\n",
+    "  ax.set_xlim([x[0]-1, x[-1]+1])\n",
     "  # y axis\n",
     "  ax.set_yscale(yscale)\n",
     "  ax.set_ylabel(ylabel)\n",
     "  # Plotting\n",
+    "  plt.hlines(1.0, x[0]-1, x[-1]+1, colors='grey', lw=1.0)\n",
     "  ax.plot(x, y, marker=\"o\")\n",
     "  # Tight layout\n",
     "  plt.tight_layout()\n",
@@ -299,7 +301,7 @@
     "  yscale=\"log\",\n",
     "  figname=path + \"pod\",\n",
     "  save=True,\n",
-    "  show=True\n",
+    "  show=False\n",
     ")"
    ]
   }
