--- a/examples/VC_O3_O4/scripts/pod.ipynb
+++ b/examples/VC_O3_O4/scripts/pod.ipynb
@@ -15,7 +15,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "import sys\n",
     "import importlib\n",
     "if (importlib.util.find_spec(\"ronek\") is None):\n",
@@ -292,14 +291,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = paths[\"data\"] + \"/figs/\"\n",
-    "os.makedirs(path, exist_ok=True)\n",
     "plot_err(\n",
     "  x=dim,\n",
     "  y=err,\n",
     "  ylabel=r\"$\\Delta\\tilde{c}$ [\\%]\",\n",
     "  yscale=\"log\",\n",
-    "  figname=path + \"pod\",\n",
+    "  figname=paths[\"data\"] + \"/pod\",\n",
     "  save=True,\n",
     "  show=False\n",
     ")"
